# RegevImplementation

./: .gitignore  LICENSE  README.md  changes.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
regev/: __init__.py  bases.py  lattice.py  noise.py  parameters.py  postprocess.py  reference.py  sampling.py
scripts/: control_experiment.py
tests/: test_bases.py  test_cli.py  test_lattice.py  test_noise.py  test_postprocess.py  test_powers.py  test_reference.py  test_resolution.py  test_validation.py
