[project]
name = "regev-factoring"
version = "0.1.0"
description = "Simulation and analysis of Regev's multidimensional factoring algorithm"
requires-python = ">=3.10"
# numpy is the only hard requirement: it backs the FFT in the exact reference
# distribution. Qiskit is NOT a dependency -- nothing in the package imports
# it. It stays available as an extra for future circuit work.
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
plots = ["matplotlib", "pylatexenc"]
quantum = ["qiskit>=1.0", "qiskit-aer>=0.14"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["regev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
