[project]
name = "regev-factoring"
version = "0.2.0"
description = "Finite Gaussian-state simulation of Regev-style quantum factoring"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Carolina Amorim" },
    { name = "Owen Barnes" },
    { name = "Summer Malik" },
]
requires-python = ">=3.10"
keywords = ["quantum-computing", "factoring", "lattice", "regev"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
# numpy is the only hard requirement: it backs the FFT in the exact reference
# distribution. Qiskit is NOT a dependency -- nothing in the package imports
# it, and this project does not currently provide a gate-level circuit.
dependencies = [
    "numpy>=1.24",
]

[project.urls]
Repository = "https://github.com/carolinaoamorim/RegevImplementation"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["regev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --strict-markers"
